--- a/META.yml
+++ b/META.yml
@@ -3,22 +3,22 @@ abstract: 'useful base class for other modules'
 author:
   - 'Andy Wardley <abw@kfs.org>'
 build_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: '0'
 configure_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
-license: unknown
+generated_by: 'ExtUtils::MakeMaker version 6.98, CPAN::Meta::Converter version 2.140640'
+license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Class-Base
 no_index:
   directory:
     - t
     - inc
 requires:
-  Test::More: 0.47
+  Test::More: '0.47'
 resources:
   repository: https://github.com/szabgab/Class-Base
-version: 0.05
+version: '0.06'
